fix active thumbnail visibility

--- a/src/styles/blocks/card.sass
+++ b/src/styles/blocks/card.sass
@@ -11,12 +11,15 @@
   .gatsby-image-wrapper
     z-index: 1
     display: none
+    opacity: 0
 
     &.default
       display: block !important
+      opacity: 1
 
     &.on 
       z-index: 2 !important
+      opacity: 1
 
   img
     display: block
